src/test/deca/syntax/invalid/created/lexique/hashtag.des
token recognition error at: '#d'